--- a/www/edit.html
+++ b/www/edit.html
@@ -136,7 +136,7 @@
                         <br>
                     </div>
                     <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-                        <textarea id="edit_description" rows="8" style="text-align:left; color:#fff;"
+                        <textarea id="edit_description" rows="8" style="background: none; border: none !important; text-align:left; color:#fff;"
                             placeholder="Algorithm description...""></textarea>
                     </div>
                 </div>
