--- a/www/create.html
+++ b/www/create.html
@@ -241,7 +241,7 @@
             <br>
             <br>
         </div>
-        <div class="col-0 col-sm-0 col-md-0 col-lg-1">
+        <div style="z-index: -10;" class="col-0 col-sm-0 col-md-0 col-lg-1">
         </div>
     </div>
     <div class="col-0 col-sm-0 col-md-1 col-lg-2">
