--- a/www/create.html
+++ b/www/create.html
@@ -28,7 +28,7 @@
                     class="btn btn-outline-success mx-auto">Download Offline Version</button>
             </h1>
         </div>
-        <div style="z-index: -10;" class="col-0 col-sm-0 col-md-0 col-lg-1">
+        <div class="col-0 col-sm-0 col-md-0 col-lg-1">
         </div>
     </div>
     <div class="split row right" style="text-align: center;">
@@ -241,7 +241,7 @@
             <br>
             <br>
         </div>
-        <div style="z-index: -10;" class="col-0 col-sm-0 col-md-0 col-lg-1">
+        <div class="col-0 col-sm-0 col-md-0 col-lg-1">
         </div>
     </div>
     <div class="col-0 col-sm-0 col-md-1 col-lg-2">
