--- a/www/edit.html
+++ b/www/edit.html
@@ -146,7 +146,7 @@
                 <a style="color:#FFF!important; ">Comments:</a>
             </h1>
         </div>
-        <div style="z-index: -10;" class="col-0 col-sm-0 col-md-0 col-lg-1">
+        <div class="col-0 col-sm-0 col-md-0 col-lg-1">
         </div>
     </div>
     <div class="split row right" style="text-align: center;">
