--- a/www/create.html
+++ b/www/create.html
@@ -11,7 +11,7 @@
             <br>
             <h1 class="read_only"
                 style="text-align:center; padding-top: 14px; padding-bottom: 14px; color:#fff; font-size: 14px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
-                <div class="row" style="height:512px;">
+                <div class="row iframe_preview">
                     <div class="col-12 col-sm-12 col-md-12 col-lg-12"
                         style="height:512px;">
                         <div style="position:absolute;width:100%;height:100%;font-size: 32px !important;color: #0f0; z-index: 1;" class="loading-indicator blink-white">Loading...</div>
