--- a/www/edit.html
+++ b/www/edit.html
@@ -12,8 +12,7 @@
             <h1 class="read_only"
                 style="text-align:center; padding-top: 14px; padding-bottom: 14px; color:#fff; font-size: 14px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                 <div class="row iframe_preview">
-                    <div class="col-12 col-sm-12 col-md-12 col-lg-12"
-                        style="height:512px;">
+                    <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                         <div style="position:absolute;width:100%;height:100%;font-size: 32px !important;color: #0f0; z-index: 1;" class="loading-indicator blink-white">Loading...</div>
                         <iframe sandbox="allow-scripts allow-same-origin" allow="microphone" style="border:1px solid #fff; width: 100%; height: 100%;" id="edit_preview_iframe"></iframe>
                     </div>
