--- a/www/browse.html
+++ b/www/browse.html
@@ -40,6 +40,7 @@
             Page {{paging.current_page+1}} of {{paging.max_page}}
 
         </h1>
+        <!--BROWSE_VIEW-->
 
         <br>
     </div>
