--- a/www/index.html
+++ b/www/index.html
@@ -1378,7 +1378,7 @@
                     '    <br>\n' +
                     '    <div class="row">\n' +
                     '        <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end; text-align: right">\n' +
-                    '            <a>SNEXT LOWEST POWER OF TWO</a>\n' +
+                    '            <a>NEXT LOWEST POWER OF TWO</a>\n' +
                     '        </div>\n' +
                     '        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: left;">\n' +
                     '            <div class="checkbox">\n' +
@@ -1462,7 +1462,7 @@
                     '    <br>\n' +
                     '    <div class="row">\n' +
                     '        <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end; text-align: right">\n' +
-                    '            <a>SNEXT LOWEST POWER OF TWO</a>\n' +
+                    '            <a>NEXT LOWEST POWER OF TWO</a>\n' +
                     '        </div>\n' +
                     '        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: left;">\n' +
                     '            <div class="checkbox">\n' +
