--- a/www/create.html
+++ b/www/create.html
@@ -76,7 +76,7 @@
                         <br>
                     </div>
                     <div class="col-12 col-sm-12 col-md-6 col-lg-6">
-                        <input disabled id="edit_algorithm_author" style="background: none; border: none !important; width:inherit; text-align:center; color:#fff;"
+                        <input disabled id="create_algorithm_author" style="background: none; border: none !important; width:inherit; text-align:center; color:#fff;"
                             placeholder="Author name..." value=""></input>
                         <br>
                         <br>
