--- a/www/index.html
+++ b/www/index.html
@@ -34,7 +34,7 @@
 
 <body>
     <div id="menu" class="topnav" style="display:none !important;">
-        <a id="home_button" onclick="state.collapse_nav();" href="#home">MetaHumanity.xyz</a>
+        <a id="home_button" onclick="state.collapse_nav();" style="float: left;" href="#home">MetaHumanity.xyz</a>
         <a id="browse_button" onclick="state.collapse_nav();" href="#browse">Browse</a>
         <a id="edit_button" onclick="state.collapse_nav();" href="#edit">Edit</a>
         <a id="create_button" onclick="state.collapse_nav();" href="#create">Create</a>
