--- a/www/index.html
+++ b/www/index.html
@@ -33,6 +33,7 @@
 </head>
 
 <body>
+    <div id="menu-backgrond" class="topnav-background"></div>
     <div id="menu" class="topnav" style="display:none !important;">
         <a id="home_button" onclick="state.collapse_nav();" style="float: left;" href="#home">MetaHumanity.xyz</a>
         <a id="browse_button" onclick="state.collapse_nav();" href="#browse">Browse</a>
