--- a/www/index.html
+++ b/www/index.html
@@ -479,7 +479,7 @@
         GlobalState.prototype.refresh_content = function (page) {
 
             $("#menu").fadeIn(1000.);
-            $("#menu-background").fadeIn(1000.)
+            $(".topnav-background").fadeIn(1000.)
             $("#belownav").fadeIn(1000);
             try
             {
