--- a/www/index.html
+++ b/www/index.html
@@ -302,6 +302,7 @@
                 if (this.first_connection) {
                     //    this.handle_navigation();
                     this.first_connection = false;
+                    state.refresh_content(window.location.hash);
                 }
             }.bind(this);
 
